src/objects/pse_Pain_Point__c.object
<CustomObject>
    <description>Contains pain points and challenges the company is facing.</description>
    <fields>
        <fullName>pse_Criticality__c</fullName>
        <description>Criticality of the pain point or challenge.</description>
        <label>Criticality</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mow</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pse_Description__c</fullName>
        <description>Description on the pain point or challenge the company is facing.</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse_End_of_Idea_Submission__c</fullName>
        <description>Last date to post ideas to solve challenge or pain point.</description>
        <inlineHelpText>Last date to post ideas to solve challenge or pain point.</inlineHelpText>
        <label>End of Idea Submission</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse_Incentive_Type__c</fullName>
        <description>Reward proposed for persons proposing ideas that reach the number of points necessary to be evaluated by the innovation committee.</description>
        <inlineHelpText>Reward proposed for persons proposing ideas that reach the number of points necessary to be evaluated by the innovation committee.</inlineHelpText>
        <label>Incentive Type</label>
        <picklist>
            <picklistValues>
                <fullName>Points</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nothing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pse_Points__c</fullName>
        <description>Number of points earned if idea reached a certain number of votes.</description>
        <inlineHelpText>Number of points earned if idea reached a certain number of votes.</inlineHelpText>
        <label>Points To Be Earned</label>
        <picklist>
            <controllingField>pse_Incentive_Type__c</controllingField>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pse_Reward_Type__c</fullName>
        <description>Reward proposed for persons proposing ideas that end up being transformed in project by the innovation committee.</description>
        <inlineHelpText>Reward proposed for persons proposing ideas that end up being transformed in project by the innovation committee.</inlineHelpText>
        <label>Reward Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bonus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salary Raise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Points</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nothing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pse_Status__c</fullName>
        <description>Status of the pain point or challenge.
Open : employees can post ideas to solve the challenges or pain points.
Close : employees can&apos;t post ideas to solve the challenges or pain points.</description>
        <inlineHelpText>Status of the pain point indicating whether or not employees can post ideas to solve challenges or pain points.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Pain Point</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pain Point Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pain Points</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>